--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -76,11 +76,12 @@
       <h2>Visualization</h2>
       <canvas id="queueCanvas" width="400" height="300"></canvas>
       <div class="controls">
-        <button>Enqueue</button>
-        <button>Dequeue</button>
-        <button>Clear All</button>
+        <button onclick="enqueue(prompt('Enter value to enqueue:'))">Enqueue</button>
+        <button onclick="dequeue()">Dequeue</button>
+        <button onclick="clearQueue()">Clear All</button>
       </div>
     </section>
+    
   </main>
 </body>
 </html>
