--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -6,6 +6,9 @@
   <title>Stack Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
   <script src="../scripts/visualizations/stack.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="scripts/background-animation.js" defer></script>
+
 </head>
 <body>
   <!-- Top Footer -->
@@ -128,6 +131,7 @@
         <img src="../assets/icons/git-circle.svg" alt="GitHub">
       </a>
     </div>
+    <div id="background-animation"></div>
   </main>
 </body>
 </html>
