remove photos from ds pages

--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -21,7 +21,7 @@
   <main>
     <div class="array-header">
       <h1 class="title">Array</h1>
-      <img src="../assets/illustrations/array.png" alt="Array Illustration" class="array-image">
+      <!-- <img src="../assets/illustrations/array.png" alt="Array Illustration" class="array-image"> -->
     </div>
 
     <section class="box">
