--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -20,11 +20,10 @@
     <main>
       <div class="hash-table-header">
         <h1 class="title">Hash Table</h1>
-        <img
+        <!-- <img
           src="../assets/illustrations/hash-table.png"
           alt="Hash Table Illustration"
-          class="hash-table-image"
-        />
+          class="hash-table-image" /> -->
       </div>
 
       <section class="box">
