--- a/data-structures/heap.html
+++ b/data-structures/heap.html
@@ -19,7 +19,7 @@
   <main>
     <div class="stack-header">
       <h1 class="title">Heap</h1>
-      <img src="../assets/illustrations/heap.png" alt="Heap Illustration" class="stack-image">
+      <!-- <img src="../assets/illustrations/heap.png" alt="Heap Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
