--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -20,7 +20,7 @@
   <main>
     <div class="stack-header">
       <h1 class="title">Linked List</h1>
-      <img src="../assets/illustrations/linked-list.png" alt="Linked List Illustration" class="stack-image">
+      <!-- <img src="../assets/illustrations/linked-list.png" alt="Linked List Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
