--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -20,7 +20,7 @@
   <main>
     <div class="queue-header">
       <h1 class="title">Queue</h1>
-      <img src="../assets/illustrations/queue.png" alt="Queue Illustration" class="queue-image">
+      <!-- <img src="../assets/illustrations/queue.png" alt="Queue Illustration" class="queue-image"> -->
     </div>
 
     <section class="box">
