--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -20,7 +20,7 @@
   <main>
     <div class="stack-header">
       <h1 class="title">Graph</h1>
-      <img src="../assets/illustrations/graph.png" alt="Graph Illustration" class="stack-image">
+      <!-- <img src="../assets/illustrations/graph.png" alt="Graph Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
