--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -20,7 +20,7 @@
   <main>
     <div class="stack-header">
       <h1 class="title">Tree</h1>
-      <img src="../assets/illustrations/tree.png" alt="Tree Illustration" class="stack-image">
+      <!-- <img src="../assets/illustrations/tree.png" alt="Tree Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
