fix arrows in Stack

--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -19,7 +19,7 @@
 
     
   <main>
-    <div class="array-header">
+    <div class="ds-header">
       <h1 class="title">Array</h1>
       <!-- <img src="../assets/illustrations/array.png" alt="Array Illustration" class="array-image"> -->
     </div>
