--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -18,7 +18,7 @@
 
   <!-- Main Content -->
   <main>
-    <div class="stack-header">
+    <div class="ds-header">
       <h1 class="title">Graph</h1>
       <!-- <img src="../assets/illustrations/graph.png" alt="Graph Illustration" class="stack-image"> -->
     </div>
