--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -18,7 +18,7 @@
 
   <!-- Main Content -->
   <main>
-    <div class="stack-header">
+    <div class="ds-header">
       <h1 class="title">Linked List</h1>
       <!-- <img src="../assets/illustrations/linked-list.png" alt="Linked List Illustration" class="stack-image"> -->
     </div>
