--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -18,7 +18,7 @@
 
   <!-- Main Content -->
   <main>
-    <div class="queue-header">
+    <div class="ds-header">
       <h1 class="title">Queue</h1>
       <!-- <img src="../assets/illustrations/queue.png" alt="Queue Illustration" class="queue-image"> -->
     </div>
