--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -18,7 +18,7 @@
 
   <!-- Main Content -->
   <main>
-    <div class="stack-header">
+    <div class="ds-header">
       <h1 class="title">Tree</h1>
       <!-- <img src="../assets/illustrations/tree.png" alt="Tree Illustration" class="stack-image"> -->
     </div>
