--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -18,7 +18,7 @@
 
     <!-- Main Content -->
     <main>
-      <div class="hash-table-header">
+      <div class="ds-header">
         <h1 class="title">Hash Table</h1>
         <!-- <img
           src="../assets/illustrations/hash-table.png"
