--- a/data-structures/heap.html
+++ b/data-structures/heap.html
@@ -17,7 +17,7 @@
 
   <!-- Main Content -->
   <main>
-    <div class="stack-header">
+    <div class="ds-header">
       <h1 class="title">Heap</h1>
       <!-- <img src="../assets/illustrations/heap.png" alt="Heap Illustration" class="stack-image"> -->
     </div>
