fix arrows in Stack

--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -72,7 +72,8 @@
       </ul>
     </section>
 
-    <section class="box">
+    <!-- Visualization Section -->
+    <section class="visualization box">
       <h2>Visualization</h2>
       <canvas id="queueCanvas" width="400" height="300"></canvas>
       <div class="controls">
@@ -82,8 +83,47 @@
       </div>
     </section>
 
+    <!-- pros-cons -->
+    <section class="box">
+      <h2>Pros and Cons</h2>
+      <div class="pros-cons">
+        <div class="advantages">
+          <p>✅ need tp fill </p>
+          <p>✅ need tp fill</p>
+          <p>✅ need tp fill</p>
+        </div>
+        <div class="disadvantages">
+          <p>❌ need tp fill</p>
+          <p>❌ need tp fill</p>
+          <p>❌ need tp fill</p>
+        </div>
+      </div>
+    </section>
     
-    
+    <!-- Possible Implementations -->
+    <section class="box">
+      <h2>Possible Implementations</h2>
+      <div class="implementations">
+        <div class="circle implementation-icon">
+          <div class="icon array-icon"></div>
+          <p>Array</p>
+        </div>
+        <div class="circle implementation-icon">
+          <div class="icon linked-list-icon"></div>
+          <p>Linked List</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Git Icon -->
+    <div class="git-icon">
+      <a href="https://github.com/erezofir" target="_blank">
+        <img src="../assets/icons/git-circle.svg" alt="GitHub">
+      </a>
+    </div>
+    <div id="background-animation"></div>
   </main>
 </body>
 </html>
+
+
