fix arrows in Stack

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -21,7 +21,7 @@
 
   <!-- Main Content -->
   <main>
-    <div class="stack-header">
+    <div class="ds-header">
       <h1 class="title">Stack</h1>
       <!-- <img src="../assets/illustrations/stack.png" alt="stack Illustration" class="stack-image"> -->
     </div>
