--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     </div>
   </header>
 
+  <!-- Sub-Title -->
+  <h2 class="sub-title">
+    For <span id="dynamic-text"></span>
+    <script src="script.js"></script>
+  </h2>
+
+
   <!-- Main Content -->
   <main>
     <h1 class="main-title">Data Structures</h1>
