--- a/index.html
+++ b/index.html
@@ -16,77 +16,75 @@
     </div>
   </header>
 
-  <!-- Sub-Title -->
-  <h2 class="sub-title">
-    For <span id="dynamic-text"></span>
-    <script src="script.js"></script>
-  </h2>
-
-
   <!-- Main Content -->
   <main>
+    <!-- Main Title -->
     <h1 class="main-title">Data Structures</h1>
+
+    <!-- Sub-Title -->
+    <h2 class="sub-title">
+      For <span id="dynamic-text"></span>
+    </h2>
+
+    <!-- Pyramid Structure -->
     <div class="pyramid-structure">
-        <div class="pyramid-row">
-          <div class="circle fall-animation">
-            <a href="data-structures/stack.html">
-              <div class="icon" style="background-image: url('assets/icons/stack.svg');"></div>
-              <h3>Stack</h3>
-            </a>
-          </div>
-        </div>
-        <div class="pyramid-row">
-          <div class="circle fall-animation">
-            <a href="data-structures/queue.html">
-              <div class="icon" style="background-image: url('assets/icons/queue.svg');"></div>
-              <h3>Queue</h3>
-            </a>
-          </div>
-          <div class="circle fall-animation">
-            <a href="data-structures/array.html">
-              <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
-              <h3>Array</h3>
-            </a>
-          </div>
-        </div>
-        <div class="pyramid-row">
-          <div class="circle fall-animation">
-            <a href="data-structures/tree.html">
-              <div class="icon" style="background-image: url('assets/icons/tree.svg');"></div>
-              <h3>Tree</h3>
-            </a>
-          </div>
-          <div class="circle fall-animation">
-            <a href="data-structures/hash-table.html">
-              <div class="icon" style="background-image: url('assets/icons/hash-table.svg');"></div>
-              <h3>Hash Table</h3>
-            </a>
-          </div>
-          <div class="circle fall-animation">
-            <a href="data-structures/graph.html">
-              <div class="icon" style="background-image: url('assets/icons/graph.svg');"></div>
-              <h3>Graph</h3>
-            </a>
-          </div>
-          <div class="pyramid-row">
-            <!-- Existing rows -->
-            <div class="circle fall-animation">
-              <a href="data-structures/heap.html">
-                <div class="icon" style="background-image: url('assets/icons/heap.svg');"></div>
-                <h3>Heap</h3>
-              </a>
-            </div>
-            <div class="circle fall-animation">
-              <a href="data-structures/linked-list.html">
-                <div class="icon" style="background-image: url('assets/icons/linked-list.svg');"></div>
-                <h3>Linked List</h3>
-              </a>
-            </div>
-          </div>
-          
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/stack.html">
+            <div class="icon" style="background-image: url('assets/icons/stack.svg');"></div>
+            <h3>Stack</h3>
+          </a>
         </div>
       </div>
-      
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/queue.html">
+            <div class="icon" style="background-image: url('assets/icons/queue.svg');"></div>
+            <h3>Queue</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/array.html">
+            <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
+            <h3>Array</h3>
+          </a>
+        </div>
+      </div>
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/tree.html">
+            <div class="icon" style="background-image: url('assets/icons/tree.svg');"></div>
+            <h3>Tree</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/hash-table.html">
+            <div class="icon" style="background-image: url('assets/icons/hash-table.svg');"></div>
+            <h3>Hash Table</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/graph.html">
+            <div class="icon" style="background-image: url('assets/icons/graph.svg');"></div>
+            <h3>Graph</h3>
+          </a>
+        </div>
+      </div>
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/heap.html">
+            <div class="icon" style="background-image: url('assets/icons/heap.svg');"></div>
+            <h3>Heap</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/linked-list.html">
+            <div class="icon" style="background-image: url('assets/icons/linked-list.svg');"></div>
+            <h3>Linked List</h3>
+          </a>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- Git Icon -->
@@ -95,5 +93,8 @@
       <img src="assets/icons/git-circle.svg" alt="GitHub">
     </a>
   </div>
+
+  <!-- Scripts -->
+  <script src="scripts/main.js"></script>
 </body>
 </html>
