Order css files

--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graph Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/ds.css">s">
   <script src="../scripts/visualizations/graph.js" defer></script>
 </head>
 <body>
