--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Queue Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/ds.css">
   <script src="../scripts/visualizations/queue.js" defer></script>
 </head>
 <body class="queue">
