--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Array Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/ds.css">
   <script src="../scripts/visualizations/array.js" defer></script>
 </head>
 <body class="array">
