--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hash Table Visualization</title>
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/ds.css">
     <script src="../scripts/visualizations/hash-table.js" defer></script>
   </head>
   <body class="hash-table">
