--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linked List Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/ds.css">>
   <script src="../scripts/visualizations/linked-list.js" defer></script>
 </head>
 <body>
