--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stack Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/ds.css">
   <script src="../scripts/visualizations/stack.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="scripts/background-animation.js" defer></script>
