Order css files

--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -109,11 +109,11 @@
       <h2>Possible Implementations</h2>
       <div class="implementations">
         <div class="circle implementation-icon">
-          <div class="icon array-icon"></div>
+          <div class="icon"></div>
           <p>Static Array</p>
         </div>
-        <div class="circle implementation-icon">
-          <div class="icon array-icon"></div>
+        <div class="implementation-icon">
+          <div class="icon"></div>
           <p>Dynamic Array</p>
         </div>
       </div>
