--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -115,11 +115,11 @@
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
-        <div class="circle implementation-icon">
-          <div class="icon array-icon"></div>
+        <div class="implementation-icon">
+          <div class="icon"></div>
           <p>Array</p>
         </div>
-        <div class="circle implementation-icon">
+        <div class="implementation-icon">
           <div class="icon linked-list-icon"></div>
           <p>Linked List</p>
         </div>
