Order css files

--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -108,12 +108,12 @@
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
-        <div class="circle implementation-icon">
-          <div class="icon"></div>
+        <div class="implementation-icon">
+          <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
           <p>Static Array</p>
         </div>
         <div class="implementation-icon">
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
           <p>Dynamic Array</p>
         </div>
       </div>
