--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       For <span id="dynamic-text"></span>
     </h2>
 
-    <!-- Pyramid Structure -->
+    <!-- Pyramid Structure 
     <div class="pyramid-structure">
       <div class="pyramid-row">
         <div class="circle fall-animation">
@@ -84,7 +84,57 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
+    <div class="pyramid-structure">
+      <div class="circle">
+        <a href="data-structures/stack.html">
+          <div class="icon stack"></div>
+          <h3>Stack</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/queue.html">
+          <div class="icon queue"></div>
+          <h3>Queue</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/array.html">
+          <div class="icon array"></div>
+          <h3>Array</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/tree.html">
+          <div class="icon tree"></div>
+          <h3>Tree</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/hash-table.html">
+          <div class="icon hash-table"></div>
+          <h3>Hash Table</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/graph.html">
+          <div class="icon graph"></div>
+          <h3>Graph</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/heap.html">
+          <div class="icon heap"></div>
+          <h3>Heap</h3>
+        </a>
+      </div>
+      <div class="circle">
+        <a href="data-structures/linked-list.html">
+          <div class="icon linked-list"></div>
+          <h3>Linked List</h3>
+        </a>
+      </div>
+    </div>    
   </main>
 
   <!-- Git Icon -->
