Order css files

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -116,11 +116,11 @@
       <h2>Possible Implementations</h2>
       <div class="implementations">
         <div class="implementation-icon">
-          <div class="icon"></div>
+          <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>
           <p>Array</p>
         </div>
         <div class="implementation-icon">
-          <div class="icon linked-list-icon"></div>
+          <div class="icon" style="background-image: url('../assets/icons/linked-list.svg');"></div>
           <p>Linked List</p>
         </div>
       </div>
