Order css files

--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -106,11 +106,11 @@
       <h2>Possible Implementations</h2>
       <div class="implementations">
         <div class="circle implementation-icon">
-          <div class="icon array-icon"></div>
+          <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>>
           <p>Array</p>
         </div>
         <div class="circle implementation-icon">
-          <div class="icon linked-list-icon"></div>
+          <div class="icon" style="background-image: url('../assets/icons/linked-list.svg');"></div>
           <p>Linked List</p>
         </div>
       </div>
