--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -109,11 +109,11 @@
       <h2>Possible Implementations</h2>
       <div class="implementations">
         <div class="implementation-icon">
-          <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
+          <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>
           <p>Static Array</p>
         </div>
         <div class="implementation-icon">
-          <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
+          <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>
           <p>Dynamic Array</p>
         </div>
       </div>
