Order css files

--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -9,7 +9,8 @@
   <script src="../scripts/visualizations/queue.js" defer></script>
 </head>
 <body class="queue">
-  <!-- Top Footer -->
+
+  <!-- Top Navigation -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
     <div class="tabs">
@@ -19,16 +20,18 @@
 
   <!-- Main Content -->
   <main>
+    <!-- Page Title -->
     <div class="ds-header">
       <h1 class="title">Queue</h1>
-      <!-- <img src="../assets/illustrations/queue.png" alt="Queue Illustration" class="queue-image"> -->
     </div>
 
+    <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
       <p>A Queue is a First-In-First-Out (FIFO) data structure. Elements are added at the rear and removed from the front.</p>
     </section>
 
+    <!-- Time and Space Complexity Section -->
     <section class="box">
       <h2>Time and Space Complexity</h2>
       <table>
@@ -55,6 +58,7 @@
       </table>
     </section>
 
+    <!-- Properties Section -->
     <section class="box">
       <h2>Properties</h2>
       <ul class="spaced-list">
@@ -64,6 +68,7 @@
       </ul>
     </section>
 
+    <!-- Operations Section -->
     <section class="box">
       <h2>Operations</h2>
       <ul>
@@ -84,29 +89,29 @@
       </div>
     </section>
 
-    <!-- pros-cons -->
+    <!-- Advantages and Disadvantages Section -->
     <section class="box">
-      <h2>Pros and Cons</h2>
+      <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
         <div class="advantages">
-          <p>✅ need tp fill </p>
-          <p>✅ need tp fill</p>
-          <p>✅ need tp fill</p>
+          <p>✅ Simple to implement.</p>
+          <p>✅ Efficient for certain types of processing tasks.</p>
+          <p>✅ Useful in scheduling systems.</p>
         </div>
         <div class="disadvantages">
-          <p>❌ need tp fill</p>
-          <p>❌ need tp fill</p>
-          <p>❌ need tp fill</p>
+          <p>❌ Fixed size in static arrays.</p>
+          <p>❌ Inefficient when random access is needed.</p>
+          <p>❌ Operations depend on the implementation method.</p>
         </div>
       </div>
     </section>
-    
-    <!-- Possible Implementations -->
+
+    <!-- Possible Implementations Section -->
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
         <div class="circle implementation-icon">
-          <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>>
+          <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>
           <p>Array</p>
         </div>
         <div class="circle implementation-icon">
@@ -115,16 +120,13 @@
         </div>
       </div>
     </section>
-
-    <!-- Git Icon -->
-    <div class="git-icon">
-      <a href="https://github.com/erezofir" target="_blank">
-        <img src="../assets/icons/git-circle.svg" alt="GitHub">
-      </a>
-    </div>
-    <div id="background-animation"></div>
   </main>
+
+  <!-- GitHub Icon -->
+  <div class="git-icon">
+    <a href="https://github.com/erezofir" target="_blank">
+      <img src="../assets/icons/git-circle.svg" alt="GitHub">
+    </a>
+  </div>
 </body>
 </html>
-
-
