--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="../styles/ds.css">
   <script src="../scripts/visualizations/tree.js" defer></script>
 </head>
-<body>
-  <!-- Top Footer -->
+<body class="tree">
+
+  <!-- Top Navigation -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
     <div class="tabs">
@@ -19,18 +20,18 @@
 
   <!-- Main Content -->
   <main>
+    <!-- Page Title -->
     <div class="ds-header">
       <h1 class="title">Tree</h1>
-      <!-- <img src="../assets/illustrations/tree.png" alt="Tree Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Tree is a hierarchical data structure consisting of nodes, where each node has a parent (except the root) and zero or more children...</p>
+      <p>A Tree is a hierarchical data structure consisting of nodes, where each node has a parent (except the root) and zero or more children.</p>
     </section>
 
-    <!-- Time Complexity -->
+    <!-- Time and Space Complexity Section -->
     <section class="box">
       <h2>Time and Space Complexity</h2>
       <table>
@@ -61,7 +62,7 @@
       </table>
     </section>
 
-    <!-- Properties -->
+    <!-- Properties Section -->
     <section class="box">
       <h2>Properties</h2>
       <ul class="spaced-list">
@@ -80,9 +81,9 @@
       </div>
     </section>
 
-    <!-- Pros and Cons -->
+    <!-- Advantages and Disadvantages Section -->
     <section class="box">
-      <h2>Pros and Cons</h2>
+      <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
         <div class="advantages">
           <p>✅ Great for hierarchical relationships.</p>
@@ -96,13 +97,13 @@
         </div>
       </div>
     </section>
-
-    <!-- Git Icon -->
-    <div class="git-icon">
-      <a href="https://github.com/erezofir" target="_blank">
-        <img src="../assets/icons/git-circle.svg" alt="GitHub">
-      </a>
-    </div>
   </main>
+
+  <!-- GitHub Icon -->
+  <div class="git-icon">
+    <a href="https://github.com/erezofir" target="_blank">
+      <img src="../assets/icons/git-circle.svg" alt="GitHub">
+    </a>
+  </div>
 </body>
 </html>
