--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/visualizations/falling-animation.js" defer></script>
 </head>
-<body class="home">
+
+
   <!-- Top Footer -->
+<body class="home">
   <header class="top-footer">
-    <div class="site-name">Data Structures Visualization</div>
     <div class="tabs">
       <a href="index.html">Home</a>
+      <a href="stack.html" class="data-structure-link">Stack</a>
+      <a href="queue.html" class="data-structure-link">Queue</a>
+      <a href="linkedlist.html" class="data-structure-link">Linked List</a>
     </div>
+    <div class="site-name">@Data Structures Visualization</div>
   </header>
 
   <!-- Main Content -->
