Order css files

--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graph Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
-  <link rel="stylesheet" href="../styles/ds.css">s">
+  <link rel="stylesheet" href="../styles/ds.css">
   <script src="../scripts/visualizations/graph.js" defer></script>
 </head>
-<body>
-  <!-- Top Footer -->
+<body class="graph">
+
+  <!-- Top Navigation -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
     <div class="tabs">
@@ -19,18 +20,18 @@
 
   <!-- Main Content -->
   <main>
+    <!-- Page Title -->
     <div class="ds-header">
       <h1 class="title">Graph</h1>
-      <!-- <img src="../assets/illustrations/graph.png" alt="Graph Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Graph is a collection of nodes (or vertices) connected by edges. It can be directed or undirected, weighted or unweighted...</p>
+      <p>A Graph is a collection of nodes (or vertices) connected by edges. It can be directed or undirected, weighted or unweighted.</p>
     </section>
 
-    <!-- Time Complexity -->
+    <!-- Time and Space Complexity Section -->
     <section class="box">
       <h2>Time and Space Complexity</h2>
       <table>
@@ -61,7 +62,7 @@
       </table>
     </section>
 
-    <!-- Properties -->
+    <!-- Properties Section -->
     <section class="box">
       <h2>Properties</h2>
       <ul class="spaced-list">
@@ -83,9 +84,9 @@
       </div>
     </section>
 
-    <!-- Pros and Cons -->
+    <!-- Advantages and Disadvantages Section -->
     <section class="box">
-      <h2>Pros and Cons</h2>
+      <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
         <div class="advantages">
           <p>✅ Flexible and versatile representation.</p>
@@ -99,13 +100,13 @@
         </div>
       </div>
     </section>
-
-    <!-- Git Icon -->
-    <div class="git-icon">
-      <a href="https://github.com/erezofir" target="_blank">
-        <img src="../assets/icons/git-circle.svg" alt="GitHub">
-      </a>
-    </div>
   </main>
+
+  <!-- GitHub Icon -->
+  <div class="git-icon">
+    <a href="https://github.com/erezofir" target="_blank">
+      <img src="../assets/icons/git-circle.svg" alt="GitHub">
+    </a>
+  </div>
 </body>
 </html>
